--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -54,8 +54,9 @@ button {
 
 ::-webkit-scrollbar-thumb {
   border-radius: $corner-radius-main;
-  border: 0.5rem solid $color-black;
+  border: 0.5rem solid transparent;
   background: $color-grey-mid;
+  background-clip: content-box;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: $color-grey-dark;
